initial content and design

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Where's North</title>
+    <title>Where's North | The game where you point at places.</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Where's North</h1>
+    <main>
+      <!-- <img src="./img/icon.png" width="200" /> -->
+      <h1>Where's <span class="orange">North?</span></h1>
+      <p class="big">The game where you point at places.</p>
+      <p>
+        Sounds simple right? We name a location or a direction, you point your
+        phone where it is. The closer you point the higher your score. Start
+        playing today. (More like tomorrow... We're still in beta.)
+      </p>
+    </main>
+    <footer><a href="./privacy.html">Privacy Policy</a></footer>
   </body>
 </html>
