--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Where's North | The game where you point at places.</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <main>
