--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Privacy Policy | Where's North</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <main>
