make urls looks nicer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         playing today. (More like tomorrow... We're still in beta.)
       </p>
     </main>
-    <footer><a href="./privacy.html">Privacy Policy</a></footer>
+    <footer><a href="./privacy">Privacy Policy</a></footer>
   </body>
 </html>
