--- a/privacy.html
+++ b/privacy.html
@@ -95,6 +95,6 @@
       </p>
     </main>
 
-    <footer><a href="./index.html">Home</a></footer>
+    <footer><a href="./">Home</a></footer>
   </body>
 </html>
