change contact to support page

--- a/support.html
+++ b/support.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Contact Us | Where's North</title>
+    <title>Support | Where's North</title>
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <main>
       <!-- <img src="./img/icon.png" width="200" /> -->
-      <h1>Contact</h1>
+      <h1>Support</h1>
       <p class="big">
         Contact us with feedback or questions at
         <a href="mailto:info@wheresnorth.com">info@wheresnorth.com</a>
