--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
       <p>
         Sounds simple right? We name a location or a direction, you point your
         phone where it is. The closer you point the higher your score. Start
-        playing today. (More like tomorrow... We're still in beta.)
+        playing today.
       </p>
+      <a
+        href="https://apps.apple.com/us/app/wheres-north/id1518409874?mt=8"
+        style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2020-07-25&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"
+      ></a>
     </main>
-    <footer><a href="./privacy">Privacy Policy</a></footer>
+    <footer>
+      <a href="./privacy">Privacy Policy</a> <a href="./support">Support</a>
+    </footer>
   </body>
 </html>
